--- a/currencyConverter/package.json
+++ b/currencyConverter/package.json
@@ -2,7 +2,7 @@
     "name": "currencyConverter",
     "version": "1.0.0",
     "keywords": ["util", "functional", "server", "client", "browser"],
-    "author": "IT",
+    "author": "abdullahInuwa",
     "contributors": [],
     "dependencies": {}
 }
